# claude-cartographer

./: .gitignore  LICENSE  README.md  install.py  pyproject.toml  quick-install.bat  quick-install.sh  setup.bat  setup.sh
claude/: CLAUDE.md  settings.json
claude/commands/: map.md
claude/hooks/: post-tool-use.sh  stop.sh
claude/skills/: cartographer.md
src/cartographer/: __init__.py  __main__.py  benchmark.py  bootstrap.py  claude_integration.py  cli.py  database.py  integration.py  mapper.py  session_tracker.py  watcher.py
src/cartographer/parsers/: __init__.py  base.py  c.py  cpp.py  csharp.py  go.py  javascript.py  python.py  ruby.py  schema.py  templates.py
tests/: __init__.py  test_parsers.py
